Fix help box overflowing

--- a/customize.dist/src/less2/include/help.less
+++ b/customize.dist/src/less2/include/help.less
@@ -8,6 +8,8 @@
 
         position: relative;
         background-color: @colortheme_help-bg;
+        max-height: 50%;
+        overflow-y: auto;
         &.cp-help-hidden {
             display: none;
         }
